<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/one_time_alarm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_once_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_baseline_date_range_24px"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/btn_once_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_once_date"
        app:srcCompat="@drawable/ic_baseline_access_time_24px"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tv_once_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/alarm_date"
        app:layout_constraintBottom_toBottomOf="@+id/btn_once_date"
        app:layout_constraintStart_toEndOf="@+id/btn_once_date"
        app:layout_constraintTop_toTopOf="@+id/btn_once_date"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_once_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/alarm_time"
        app:layout_constraintBottom_toBottomOf="@+id/btn_once_time"
        app:layout_constraintStart_toEndOf="@+id/btn_once_time"
        app:layout_constraintTop_toTopOf="@+id/btn_once_time" />

    <EditText
        android:id="@+id/edt_once_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/alarm_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_once_time"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_set_time_alarm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/set_one_time_alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_once_message" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/repeating_alarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_set_time_alarm" />

    <ImageButton
        android:id="@+id/btn_repeat_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/ic_baseline_access_time_24px"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tv_repeat_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/alarm_time"
        app:layout_constraintBottom_toBottomOf="@+id/btn_repeat_time"
        app:layout_constraintStart_toEndOf="@+id/btn_repeat_time"
        app:layout_constraintTop_toTopOf="@+id/btn_repeat_time" />

    <EditText
        android:id="@+id/edt_repeat_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/alarm_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_repeat_time"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_cancel_repeat_alarm"
        android:layout_width="194dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/cancel_alarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_repeat_message" />

    <Button
        android:id="@+id/btn_set_repeat_alarm"
        android:layout_width="192dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/set_repeating_alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_repeat_message" />

</android.support.constraint.ConstraintLayout>